# ml_introduction

./: .gitignore  README.md  mypy.ini  pyproject.toml
notebooks/introduction/: introduction.ipynb  k-nearest_neighbours.ipynb  split_data.ipynb
notebooks/supervised_learning/: LogisticRegressionClassification.ipynb  Untitled.ipynb  knn_classification.ipynb  linear_models.ipynb
