[tool.poetry]
name = "ml_introduction"
version = "0.1.0"
description = ""
authors = ["Kemal Diri <kemaldiri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mypy = "^0.782"
black = "^19.10b0"
pandas = "^1.1.0"
numpy = "^1.19.1"
matplotlib = "^3.3.0"
scikit-learn = "^0.23.2"
scipy = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
